# ACE

./: .env.example  .gitignore  README.md  TRD.md  analytics_backup.json  codebase_analysis.md.resolved  docker-compose.yml  enrich_threads.py  example.resume.md  fix_analytics_data.py  list_drafts.py  main.py  plan.md  production_readiness.md  pyproject.toml  resume.md  visualize_graph.py
config/: settings.py
src/: analytics.py  google_auth.py  graph.py  nodes.py  prompts.py  state.py  tools_followup.py  tools_gmail.py  tools_sheets.py  utils.py
